# LMAC

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
.history/: README_20260329151238.md  README_20260329151325.md  STRUCTURE_20260326125735.md  STRUCTURE_20260329151422.md
.history/agentic_rag/: config_20260326025206.py  config_20260329152101.py  main_20260329151840.py
.history/agentic_rag/frontend/: streamlit_app_20260329152304.py  streamlit_app_20260329152322.py
agentic_rag/: __init__.py  main.py
agentic_rag/api/: __init__.py
agentic_rag/core/: __init__.py  agent.py  cache.py
agentic_rag/db/: __init__.py
agentic_rag/frontend/: __init__.py  api.js  app.js  index.html  streamlit_app.py  style.css
docs/: api.md  architecture.md  deployment.md
tests/: test_basic.py
