[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-rag"
version = "2.0.0"
description = "Agentic RAG System - 智能检索增强生成系统"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["rag", "llm", "agent", "elasticsearch", "fastapi"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "sqlalchemy>=2.0.0",
    "pymysql>=1.1.0",
    "passlib[bcrypt]>=1.7.4",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.5.0",
    "elasticsearch>=8.11.0",
    "langchain>=0.0.350",
    "langgraph>=0.0.40",
    "sentence-transformers>=2.2.0",
    "transformers>=4.36.0",
    "torch>=2.1.0",
    "pymupdf>=1.23.0",
    "python-docx>=1.1.0",
    "llama-index>=0.9.0",
    "streamlit>=1.28.0",
    "requests>=2.31.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.6.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/agentic-rag"
Repository = "https://github.com/yourusername/agentic-rag"
Issues = "https://github.com/yourusername/agentic-rag/issues"

[project.scripts]
agentic-rag = "agentic_rag.main:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["agentic_rag*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 100
